2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Remove all references to console_reserve_resources and
	termios_reserve_resources.
	* console/consolereserveresources.c: Removed.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c, include/bsp.h: Eliminate copies of the Configuration
	Table. Use the RTEMS provided accessor macros to obtain configuration
	fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Moved most of the remaining CPU Table fields to the
	Configuration Table. This included pretasking_hook, predriver_hook,
	postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/ckinit.c, include/bsp.h: Fix spacing.

2007-11-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: Formatting.

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/debugputs.c, include/bsp.h, startup/spurious.c: Remove debug
	print methods that are redundant with prntk and replace their use
	with printk.

2007-05-03	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Handle .data.* sections

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-03-28	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c: Add support to the Clock driver template for
	rtems_clock_set_nanoseconds_extension and the potential for TOD and