@@ -94,4 +94,19 @@ static int clkirq;
     LEON3_Timer_Regs->timer[LEON3_CLOCK_INDEX].conf = 0; \
   } while (0)
 
+uint32_t bsp_clock_nanoseconds_since_last_tick(void)
+{
+  uint32_t clicks;
+  if ( !LEON3_Timer_Regs )
+    return 0;
+
+  clicks = LEON3_Timer_Regs->timer[0].value;
+
+  /* Down counter */
+  return (uint32_t)
+     (rtems_configuration_get_microseconds_per_tick() - clicks) * 1000;
+}
+
+#define Clock_driver_nanoseconds_since_last_tick bsp_clock_nanoseconds_since_last_tick
+
 #include "../../../shared/clockdrv_shell.c"
